Serve using Thorntail instead of Wildfly. Also switch base image to distroless.