@@ -5,14 +5,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.merakianalytics.kernel</groupId>
-	<artifactId>kernel-parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<artifactId>kernel</artifactId>
+	<version>4.0.0-SNAPSHOT</version>
+	<packaging>war</packaging>
 
-	<modules>
-		<module>kernel</module>
-		<module>kernel-wildfly</module>
-	</modules>
+	<name>kernel</name>
+	<description>Riot API proxy server</description>
+	<url>https://github.com/meraki-analytics/kernel</url>
 
 	<developers>
 		<developer>
@@ -53,16 +52,17 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
+		<maven.war.version>3.2.2</maven.war.version>
 		<maven.resources.version>3.1.0</maven.resources.version>
 		<maven.dockerfile.version>1.4.10</maven.dockerfile.version>
 		<maven.deploy.version>2.8.2</maven.deploy.version>
 		<maven.license.version>1.16</maven.license.version>
-		<slf4j.version>1.7.25</slf4j.version>
 		<junit.version>5.3.2</junit.version>
 		<junit.launcher.version>1.3.2</junit.launcher.version>
-		<javaee.version>8.0</javaee.version>
-		<resteasy.version>3.0.24.Final</resteasy.version>
+		<slf4j.version>1.7.25</slf4j.version>
+		<thorntail.version>2.3.0.Final</thorntail.version>
 		<deltaspike.version>1.9.0</deltaspike.version>
 		<datapipelines.version>1.0.5-SNAPSHOT</datapipelines.version>
 		<orianna.version>4.0.0-SNAPSHOT</orianna.version>
@@ -70,103 +70,134 @@
 		<guava.version>27.0.1-jre</guava.version>
 		<jackson.version>2.9.8</jackson.version>
 		<msgpack.version>0.8.16</msgpack.version>
-		<swagger.version>1.5.21</swagger.version>
 		<docker.image>merakianalytics/kernel</docker.image>
+		<docker.tag>base</docker.tag>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-engine</artifactId>
-				<version>${junit.version}</version>
-				<scope>test</scope>
+				<groupId>io.thorntail</groupId>
+				<artifactId>bom-all</artifactId>
+				<version>${thorntail.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.junit.platform</groupId>
-				<artifactId>junit-platform-launcher</artifactId>
-				<version>${junit.launcher.version}</version>
-				<scope>test</scope>
+				<groupId>io.thorntail</groupId>
+				<artifactId>build-parent</artifactId>
+				<version>${thorntail.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>javax</groupId>
-				<artifactId>javaee-api</artifactId>
-				<version>${javaee.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.resteasy</groupId>
-				<artifactId>resteasy-jaxrs</artifactId>
-				<version>${resteasy.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.deltaspike.modules</groupId>
-				<artifactId>deltaspike-servlet-module-api</artifactId>
+				<groupId>org.apache.deltaspike.distribution</groupId>
+				<artifactId>distributions-bom</artifactId>
 				<version>${deltaspike.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.deltaspike.modules</groupId>
-				<artifactId>deltaspike-servlet-module-impl</artifactId>
-				<version>${deltaspike.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.deltaspike.core</groupId>
-				<artifactId>deltaspike-core-api</artifactId>
-				<version>${deltaspike.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.merakianalytics.datapipelines</groupId>
-				<artifactId>datapipelines</artifactId>
-				<version>${datapipelines.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.merakianalytics.orianna</groupId>
-				<artifactId>orianna</artifactId>
-				<version>${orianna.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.guava</groupId>
-				<artifactId>guava</artifactId>
-				<version>${guava.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.datatype</groupId>
-				<artifactId>jackson-datatype-joda</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.msgpack</groupId>
-				<artifactId>jackson-dataformat-msgpack</artifactId>
-				<version>${msgpack.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.swagger</groupId>
-				<artifactId>swagger-jaxrs</artifactId>
-				<version>${swagger.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-launcher</artifactId>
+			<version>${junit.launcher.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
+		<dependency>
+			<groupId>io.thorntail</groupId>
+			<artifactId>jaxrs</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.thorntail</groupId>
+			<artifactId>cdi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.thorntail</groupId>
+			<artifactId>swagger</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.deltaspike.core</groupId>
+			<artifactId>deltaspike-core-api</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.deltaspike.core</groupId>
+			<artifactId>deltaspike-core-impl</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.merakianalytics.datapipelines</groupId>
+			<artifactId>datapipelines</artifactId>
+			<version>${datapipelines.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.merakianalytics.orianna</groupId>
+			<artifactId>orianna</artifactId>
+			<version>${orianna.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version><!--$NO-MVN-MAN-VER$ -->
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-joda</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.msgpack</groupId>
+			<artifactId>jackson-dataformat-msgpack</artifactId>
+			<version>${msgpack.version}</version>
+		</dependency>
+	</dependencies>
+
 	<build>
+		<finalName>${project.artifactId}</finalName>
+
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.version}</version>
 				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
 					<source>1.8</source>
 					<target>1.8</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${maven.war.version}</version>
+				<configuration>
+					<argLine>--illegal-access=permit</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -185,6 +216,42 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>io.thorntail</groupId>
+				<artifactId>thorntail-maven-plugin</artifactId>
+				<version>${thorntail.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>package</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>${maven.resources.version}</version>
+				<executions>
+					<execution>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/</outputDirectory>
+							<overwrite>true</overwrite>
+							<resources>
+								<resource>
+									<directory>${basedir}/configurations/dto/base</directory>
+									<includes>
+										<include>kernel-config.json</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -195,12 +262,120 @@
 			<build>
 				<plugins>
 					<plugin>
+						<groupId>com.spotify</groupId>
+						<artifactId>dockerfile-maven-plugin</artifactId>
+						<version>${maven.dockerfile.version}</version>
+						<executions>
+							<execution>
+								<id>default</id>
+								<goals>
+									<goal>build</goal>
+									<goal>push</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<repository>${docker.image}</repository>
+							<tag>${docker.tag}</tag>
+							<pullNewerImage>false</pullNewerImage>
+							<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+						</configuration>
+					</plugin>
+					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-deploy-plugin</artifactId>
 						<version>${maven.deploy.version}</version>
 						<configuration>
 							<skip>true</skip>
 						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>mongo</id>
+
+			<properties>
+				<docker.tag>mongo</docker.tag>
+			</properties>
+
+			<dependencies>
+				<dependency>
+					<groupId>com.merakianalytics.orianna.datastores</groupId>
+					<artifactId>mongo</artifactId>
+					<version>${orianna.datastores.version}</version>
+				</dependency>
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>${maven.resources.version}</version>
+						<executions>
+							<execution>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${basedir}/target/</outputDirectory>
+									<overwrite>true</overwrite>
+									<resources>
+										<resource>
+											<directory>${basedir}/configurations/dto/mongo</directory>
+											<includes>
+												<include>kernel-config.json</include>
+											</includes>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>xodus</id>
+
+			<properties>
+				<docker.tag>xodus</docker.tag>
+			</properties>
+
+			<dependencies>
+				<dependency>
+					<groupId>com.merakianalytics.orianna.datastores</groupId>
+					<artifactId>xodus</artifactId>
+					<version>${orianna.datastores.version}</version>
+				</dependency>
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>${maven.resources.version}</version>
+						<executions>
+							<execution>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${basedir}/target/</outputDirectory>
+									<overwrite>true</overwrite>
+									<resources>
+										<resource>
+											<directory>${basedir}/configurations/dto/xodus</directory>
+											<includes>
+												<include>kernel-config.json</include>
+											</includes>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
